alignment fix

--- a/src/components/pages/algos/AlgLab5/AlgLab5.module.css
+++ b/src/components/pages/algos/AlgLab5/AlgLab5.module.css
@@ -2,6 +2,8 @@
     position: relative;
     display: flex;
     height: 100%;
+    flex-direction: column;
+    align-items: stretch;
 }
 
 .controlPanel {
